[gd_scene load_steps=6 format=1]

[ext_resource path="res://actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://actors/player/player.tex" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 7.97862
height = 8.4951

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 20.9642, 6.02246 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 11.2378, 6.02246 )

[node name="player" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 4, 0, 0, 4, 0.58112, 15.0457 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 12.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

transform/scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.58112, 15.0457 )
transform/scale = Vector2( 4, 4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bottom_check" type="Area2D" parent="."]

transform/pos = Vector2( -0.440125, 0 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 59.7018 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="bottom_collider" type="CollisionShape2D" parent="bottom_check"]

transform/pos = Vector2( 0, 59.7018 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="top_check" type="Area2D" parent="."]

transform/pos = Vector2( -0.440125, 0 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -28.3769 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="top_collider" type="CollisionShape2D" parent="top_check"]

transform/pos = Vector2( 0, -28.3769 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 8.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[connection signal="area_enter" from="bottom_check" to="." method="_on_bottom_check_area_enter"]

[connection signal="body_enter" from="bottom_check" to="." method="_on_bottom_check_body_enter"]

[connection signal="body_exit" from="bottom_check" to="." method="_on_bottom_check_body_exit"]

[connection signal="body_enter" from="top_check" to="." method="_on_top_check_body_enter"]


